# livelybot_sdk_v3.1

./: README.md
livelybot_sdk_v3.1/: README.md  test_feedback.sh  test_motor.sh  test_motor_run.sh  test_reconfigure.sh  test_reset_zero.sh
livelybot_sdk_v3.1/src/livelybot_bringup/launch/: test_feedback.launch  test_motor_run.launch  test_reconfigure.launch  test_reset_zero.launch
livelybot_sdk_v3.1/src/livelybot_bringup/script/: joy_control.py
livelybot_sdk_v3.1/src/livelybot_description/launch/: livelybot_description.launch
livelybot_sdk_v3.1/src/livelybot_description/robot_param/: 10dof_STM32H730_model_test_Orin_params.yaml  12dof_STM32H730_model_test_Orin_params.yaml  20dof_STM32H730_model_test_Orin_params.yaml  6dof_STM32H730_model_test_Orin_params.yaml  80dof_STM32H730_model_test_Orin_params.yaml
livelybot_sdk_v3.1/src/livelybot_msg/: CMakeLists.txt  package.xml
livelybot_sdk_v3.1/src/livelybot_msg/msg/: HighState.msg  MotorState.msg
livelybot_sdk_v3.1/src/livelybot_serial/: CMakeLists.txt  package.xml
livelybot_sdk_v3.1/src/livelybot_serial/cfg/: robot_dynamic_config_20.cfg
livelybot_sdk_v3.1/src/livelybot_serial/include/: lively_serial.h  motor_struct.h  robot_node.h  serial_struct.h
livelybot_sdk_v3.1/src/livelybot_serial/include/crc/: crc16.h  crc8.h
livelybot_sdk_v3.1/src/livelybot_serial/include/hardware/: canboard.h  canport.h  motor.h  robot.h
livelybot_sdk_v3.1/src/livelybot_serial/src/: ik_run.cpp  lively_serial.cc  robot_node.cpp  serial_t.cpp  sub_imu.cpp
livelybot_sdk_v3.1/src/livelybot_serial/src/hardware/: motor.cc
livelybot_sdk_v3.1/src/livelybot_serial/test/: test_feedback.cpp  test_motor.cpp  test_motor_run.cpp  test_reconfigure.cpp  test_reset_zero.cpp
livelybot_sdk_v3.1/src/serial/: CMakeLists.txt
livelybot_sdk_v3.1/src/yesense_ros/yesense/launch/: run_without_rviz.launch
livelybot_sdk_v3.1/src/yesense_ros/yesense/src/: yesense_driver.cpp
